<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_bd_map_type_satellite"
        android:orderInCategory="100"
        android:title="@string/text_bd_map_type_SATELLITE"
        app:showAsAction="never" />
     <item
            android:id="@+id/menu_bd_map_location"
            android:orderInCategory="100"
            android:title="@string/text_bd_map_location"
            app:showAsAction="never" />

    <item
            android:id="@+id/menu_bd_map_mark"
            android:orderInCategory="100"
            android:title="@string/text_bd_map_mark"
            app:showAsAction="never" />


    <item
            android:id="@+id/menu_bd_map_poi"
            android:orderInCategory="100"
            android:title="@string/text_bd_map_poi"
            app:showAsAction="never" />



    <item
            android:id="@+id/menu_bd_map_route_plan"
            android:orderInCategory="100"
            android:title="@string/text_bd_route_plan"
            app:showAsAction="never" />

</menu>
